--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was Created by Manish Mittal. It uses data from mapbox.com!!!</p>
         <img class="portrait" src="./img/mm.jpg">
         {{!-- <p>Created by :: {{name}}</p> --}}
     </div>
